--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -1,6 +1,6 @@
 ---
-title: "Covid19 vaccine study Fall2021"
-author: "Put your name here!"
+title: "Covid19 vaccine study Falln 2021"
+author: "Jason Briseno"
 date: "`r Sys.Date()`"
 output: 
   html_document:
@@ -13,8 +13,17 @@ output:
 require(tidyverse)
 require(tigerstats)
 require(forcats)
-TheData <-read.csv(file="fall21.csv",header=TRUE)
-TheData <- TheData %>% mutate(across(where(is.character),as.factor))
+OldData <-read.csv(file="fall21.csv",header=TRUE)
+#recode to remove the annoying "X" from the dataframe
+FinalData <- OldData %>% mutate(infected = recode(infected, aids = "covid", none = "OK" )) %>% select(-one_of("X"))
+FinalData <- FinalData %>%
+mutate(across(where(is.character), as.factor))
+FinalData$treatment <- relevel(FinalData$treatment,ref="placebo")
+#FinalData$infected <- relevel(FinalData$infected,ref="OK")
+guy = filter(FinalData, sex =="guy")
+gal = filter(FinalData, sex =="gal")
+gay = filter(FinalData, LGBTQ =="gay")
+Druguser = filter(FinalData, DrugUser =="yes")
 ```
 
 # Introduction
