7th commit inferentual female

--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -149,7 +149,40 @@ These numerical results show specific percentages of girls(females) that got cov
 Among the gals, 33% got covid-19 after taking the vaccine, while the approximately 67% of girls that were given the placebo contracted covid-19. The vaccine is clearly not effective in preventing covid-19 in girls(females) and it is not recommended. Those who took the placebo were much less likely to contact covid-19
 The odds of getting covid-19  for a woman while taking the vaccine is 1:2. The women that took the drug were half as likely to get covid-19 (33%) than those taking the placebo(67%).
 
+## inferential Results
 
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+galfish <- fisher.test(table1)
+galfish
+```
+
+
+The information to play close attention to among all of these results is the output of the Fisher's Exact test. The p-value displayed above is extremely small at 2e-16. This is an awfully small number. seeing this number means that these results are not likely to occur by chance.
+
+
+
+The null hypothesis predicted that the infection rate related to covid-19 vaccination effectiveness are independent of subgroup. Since it is clear that subgroup does play a role in the covid infection rate in the vaccinated individuals, the alternative hypothesis, that there is a correlation between covid-19 vaccination effectiveness and subgroups, is the favorable option.
+
+The odd ratio above illustrates a ratio of 2.00. the women(females) who received tha vaccine were half as likely to get covid-19 than those who received the placebo. 
+
+```{r}
+effect <- galfish$p.value/(galfish$p.value +1)
+effectivenessgal = galfish$estimate/(galfish$estimate +1)*100
+print(effectivenessgal)
+```
+
+```{r}
+low=(galfish$conf.int[1]/(galfish$conf.int[1] +1))*100
+hi=(galfish$conf.int[2]/(galfish$conf.int[2] +1))*100
+options(digits=2)
+```
+
+
+Above is the effectiveness for the covid-19 vaccine for women(females). If the effectiveness is above 50% that means that the vaccine is effective. Based on the interval seen above, we cn conclude that the vaccine is ineffective in protecting (women) from getting covid-19. 
+
+The odds ratio is approximately how effective the vaccine is. The odds ratio for the women(females) can be seen above as 67. The effectiveness confidence interval for the guys is 55.09 to 75.05.
 
 # Drug Users
 
