--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -186,6 +186,33 @@ The odds ratio is approximately how effective the vaccine is. The odds ratio for
 
 # Drug Users
 
+```{r}
+dd2 <- Druguser %>% group_by(infected,treatment) %>% summarize(count=n()) %>% mutate(prcnt=count/sum(count))
+
+
+# the group_by followed by summarize(count=n())
+
+basicC <- ggplot(dd2,aes(x=infected,y=count,fill=treatment))
+basicC + geom_bar(stat="identity",position="dodge")
+
+#Now for percentage plot
+
+basicCC <- ggplot(dd2,aes(x=infected,y=prcnt*100,fill=treatment)) 
+basicCC + geom_bar(stat="identity", position = "dodge")
+```
+
+This plot represents the population of (Druguser)  and the relationship to the contraction of covid-19 by either talking the vaccine or the placebo. 
+
+
+The plot above shows that only 33% of the girls that took the vaccine did in fact get covid-19, while only approximately 67% of (Drugusers)taking the placebo contracted covid-19.  A substantially lower percentage of people who took the vaccine contracted covid-19 versus those who were only given the placebo. The vaccine appears to be ineffective in protection against covid-19. The odds of getting covid-19 while taking the vaccine is 3:2. The men that took the drug were half as likely to get covid-19 than those taking the placebo.
+
+
+There are two plots. In first plot,the x-axis represents infected, whether the participants were infected with covid-19 or they were not. The y-axis represents the count, or number of people that got covid-19 or not.
+In was the second plot, the one above, The The left two bars of the graph are all Drugusers that got covid-19. The x-axis represents whether a  person got covid-19 or not. The y-axis, however, instead of representing the number of people who got covid-19, now represents the percentage of Drug users that got covid-19 after taking the the placebo or taking the Vaccine. 
+
+
+The codes that  create this plot start with the code block beginning with dd2. dd2 can be seen in the environment pane and if inspected contains 4 variables.These variables include infected, treatment, count, and prcent(stands for percent). The second group of codes is called the basicC. BasicC can also be seen in the environment pane and appears to contain a list of 9 variables. This information creates the first plot. The basicCC is the last bunch of codes and is also in the files pane. It also contains 9 variables and helps to create the percentage plot, the second plot.
+
 # LGBTQ
 
 # Conclusions and recommendations
