--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -213,6 +213,16 @@ In was the second plot, the one above, The The left two bars of the graph are al
 
 The codes that  create this plot start with the code block beginning with dd2. dd2 can be seen in the environment pane and if inspected contains 4 variables.These variables include infected, treatment, count, and prcent(stands for percent). The second group of codes is called the basicC. BasicC can also be seen in the environment pane and appears to contain a list of 9 variables. This information creates the first plot. The basicCC is the last bunch of codes and is also in the files pane. It also contains 9 variables and helps to create the percentage plot, the second plot.
 
+### Numerical results
+
+```{r}
+table1 <- xtabs(~infected + treatment, data=Druguser)
+rowPerc(table1)
+colPerc(table1)
+```
+These numerical results show specific percentages of Drugusers that got covid-19 after taking the placebo and taking the vaccine. Among the Drugusers, 33% got covid-19 after taking the vaccine, while the approximately 67% of drugusers that were given the placebo contracted covid-19. The vaccine is clearly effective in preventing covid-19 in drugusers and it is  recommended. Those who took the placebo were much more likely to contact covid-19
+The odds of getting covid-19  for a druguser while taking the vaccine is 1:2. The drugusers that took the drug were half as likely to get covid-19 (33%) than those taking the placebo(67%).
+
 # LGBTQ
 
 # Conclusions and recommendations
