--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -287,5 +287,15 @@ In was the second plot, the one above, The The left two bars of the graph are al
 
 The codes that  create this plot start with the code block beginning with dd2. dd2 can be seen in the environment pane and if inspected contains 4 variables.These variables include infected, treatment, count, and prcent(stands for percent). The second group of codes is called the basicC. BasicC can also be seen in the environment pane and appears to contain a list of 9 variables. This information creates the first plot. The basicCC is the last bunch of codes and is also in the files pane. It also contains 9 variables and helps to create the percentage plot, the second plot.
 
+### Numerical results
+
+```{r}
+table1 <- xtabs(~infected + treatment, data=gay)
+rowPerc(table1)
+colPerc(table1)
+```
+These numerical results show specific percentages of  LGBTQ that got covid-19 after taking the placebo and taking the vaccine. Among the  LGBTQ, 71% got covid-19 after taking the vaccine, while  approximately 29% of  LGBTQ that were given the placebo contracted covid-19. The vaccine is clearly ineffective in preventing covid-19 in  LGBTQ and it is not recommended for them. Those who took the placebo were much more likely to contact covid-19
+The odds of getting covid-19  while taking the vaccine is 3:1. The  LGBTQ that took the drug were much more likely to get covid-19 (71%) than those taking the placebo(29%).
+
 # Conclusions and recommendations
 
