--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -297,5 +297,40 @@ colPerc(table1)
 These numerical results show specific percentages of  LGBTQ that got covid-19 after taking the placebo and taking the vaccine. Among the  LGBTQ, 71% got covid-19 after taking the vaccine, while  approximately 29% of  LGBTQ that were given the placebo contracted covid-19. The vaccine is clearly ineffective in preventing covid-19 in  LGBTQ and it is not recommended for them. Those who took the placebo were much more likely to contact covid-19
 The odds of getting covid-19  while taking the vaccine is 3:1. The  LGBTQ that took the drug were much more likely to get covid-19 (71%) than those taking the placebo(29%).
 
+## inferential Results
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+gayfish <- fisher.test(table1)
+gayfish
+```
+
+The information to play close attention to among all of these results is the output of the Fisher's Exact test. The p-value displayed above is extremely small at .00006. This is an awfully small number, This number means that these results are not likely to occur by chance.
+
+
+
+The null hypothesis predicted that the  covid-19 vaccine effectiveness is independent of subgroup. Since it is clear that subgroup does play a role in the rate of infection  in individuals that were vaccinated, the alternative hypothesis, that there is a correlation between covid-19 infection rate in those vaccinated  and subgroups, is the favorable option.
+
+The odd ratio above illustrates a ratio of 0.4. the  LGBTQ who received tha vaccine were as likely to get covid-19 than those who received the placebo. 
+
+```{r}
+effect <- gayfish$p.value/(gayfish$p.value +1)
+effectivenessgay = gayfish$estimate/(gayfish$estimate +1)*100
+print(effectivenessgay)
+```
+
+
+
+```{r}
+low=(gayfish$conf.int[1]/(gayfish$conf.int[1] +1))*100
+hi=(gayfish$conf.int[2]/(gayfish$conf.int[2] +1))*100
+options(digits=2)
+```
+
+Above is the effectiveness for the covid-19 vaccine for (LGBTQ). If the effectiveness is above 50% that means that the vaccine is effective. Based on the interval seen above, we can conclude that the vaccine is ineffective in protecting (LGBTQ) from getting covid-19. 
+
+The odds ratio is approximately how effective the vaccine is. The odds ratio for the drugusers can be seen above as 29. The effectiveness confidence interval for the(LGBTQ) is 24, 45, to 36.56.
+
 # Conclusions and recommendations
 
